# OpenVINO-Autonomous-GUI-Agent

./: .gitignore  @AutomationLog.txt  CONTRIBUTING.md  README.md  config.py  e2e_test.py  e2e_verify.py  main.py  pyproject.toml  requirements.txt  run.sh  start.py
agents/: action.py  grounding.py  planning.py  reflection.py  router.py
agents/action/: action_agent.py
agents/grounding/: grounding_agent.py
agents/planning/: planning_agent.py
agents/reflection/: reflection_agent.py
agents/router/: router_agent.py
configs/models/: models.yaml
core/: action_firewall.py  burst_executor.py  controller.py  error_handling.py  orchestrator.py  ovms_client.py  protocols.py  windows_uia.py
core/capture/: screen_snapshot.py  screenshot.py
core/executor/: burst_executor.py
core/grounding/: __init__.py  hybrid_grounding.py  ocr_engine.py  som_engine.py  windows_uia.py
core/pipeline/: direct_client.py  ollama_client.py  optimized_pipeline.py  ovms_client.py
core/protocols/: a2a.py
core/safety/: action_firewall.py
docs/: UI_DESIGN_SYSTEM.md
memory/: interaction_memory.db  task_memory.py
memory/interaction/: app_knowledge.py
memory/screen/: screen_history.py
memory/task/: task_memory.py
scripts/benchmarks/: latency_benchmark.py  optimization_benchmark.py
scripts/docker/: docker-compose.yml
scripts/setup/: enable_gpu.sh  pull_models.py  pull_models.sh  start_dev.bat  start_dev.sh  verify_setup.py
tests/: live_folder_test.py  live_usecases_test.py  test_grounding_live.py  test_vlm_coordinates.py
tests/e2e/: test_pipeline.py  test_verify.py
tests/live/: test_folder.py  test_grounding.py  test_usecases.py  test_vlm_coordinates.py
tests/unit/: test_action_firewall.py  test_burst_executor.py  test_capture.py  test_controller.py  test_grounding.py  test_grounding_element_types.py  test_grounding_vlm_parse.py  test_orchestrator.py  test_orchestrator_burst_before_routing.py  test_orchestrator_cmd_check.py  test_orchestrator_idempotency.py  test_orchestrator_loop_guard.py  test_orchestrator_new_window_launch.py  test_orchestrator_verify_launch.py  test_planning.py  test_planning_prompt_bias.py  test_planning_rightclick_override.py  test_planning_visual.py  test_reflection.py  test_reflection_confidence.py  test_reflection_screen_delta.py  test_reflection_success_condition.py  test_reflection_vlm_escalation.py  test_router.py  test_router_completeness.py  test_screen_snapshot.py  test_ui.py  test_ui_interactions.py  test_ui_smoke.py
tools/desktop_control/: controller.py  server.py
ui/: events.py  hud.py  icons.py  main_window.py  pages.py  panels.py  theme.py  widgets.py
utils/: clipboard.py  credentials.py  platform_utils.py
