[project]
name = "intel-openvino-desktop-agent"
version = "0.1.0"
description = "Local-first desktop GUI agent: See → Plan → Act → Verify loop driven by on-device LLM/VLM inference"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# Runtime dependencies are managed in requirements.txt (pip install -r requirements.txt).
# This file carries project metadata and tool configuration only.

[tool.pytest.ini_options]
# Repo root on sys.path so `pytest tests/unit` works without PYTHONPATH=.
pythonpath = ["."]
testpaths = ["tests/unit"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 110
extend-exclude = ["models", "tools/ovms"]  # tools/ovms is fetched verbatim from OVMS

[tool.ruff.lint]
# Rule families aligned with the Google Python Style Guide:
#   F   pyflakes        — unused imports/vars, undefined names
#   E4  imports · E7 statement style · E9 syntax errors · W warnings
#       (E501 line-too-long is intentionally NOT enforced: the guide permits
#        lines over the limit when the auto-formatter cannot split them, and
#        the project caps at 110 above.)
#   I   isort           — import grouping/order (Google §3.13)
#   UP  pyupgrade       — modern typing: list/dict over List/Dict, X | None (§3.19)
#   B   flake8-bugbear  — likely-bug patterns
#   C4  comprehensions  — simpler comprehensions (§2.7)
#   D2/D4 pydocstyle    — docstring formatting (§3.8), Google convention below
select = ["F", "E4", "E7", "E9", "W", "I", "UP", "B", "C4",
          "D204", "D209", "D212", "D403"]
# UP031: %-format is clearer than .format/f-strings for strings full of literal
# JSON braces (see tests/unit/test_reflection_vlm_escalation.py); keep %-format.
ignore = ["UP031"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests insert the repo root onto sys.path before importing project modules,
# and live tests keep compact inline helpers.
"tests/*" = ["E402"]
# Root convenience scripts set up sys.path / env before importing the package.
"e2e_test.py" = ["E402"]
"e2e_verify.py" = ["E402"]
